<resources>
    <string name="app_name">Mylib</string>
    <string name="txt_codhint">Ingrese codigo ISBN</string>
    <string name="libro_titulo">Título: </string>
    <string name="libro_autor">Autor(es): </string>
    <string name="libro_desc">Descripción: </string>
    <string name="libro_pag">Páginas: </string>
    <string name="libro_editor">Editorial: </string>
    <string name="libro_fecha">Año de publicación: </string>
    <string name="btn_escanear">Escanear</string>
    <string name="btn_buscar">Buscar</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_ver">Listar</string>
    <string name="hint_prestamo">Ingrese detalle del prestamo del libro</string>
    <string name="txt_prestado">Prestado</string>
    <string name="btn_volver">Volver</string>
    <string name="hint_filtro">Ingrese filtro</string>
</resources>
