<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cl.example.evelyn.biblioteca.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtCodigo"
            android:inputType="number"
            android:hint="Ingrese codigo ISBN"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/btnEscanear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="escanearQR"
            android:textAllCaps="false"
            android:text="@string/btn_escanear" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEnviar"
            android:text="@string/btn_buscar"
            android:textAllCaps="false"
            android:padding="10dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnGuardar"
            android:text="@string/btn_guardar"
            android:textAllCaps="false"
            android:padding="10dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnListar"
            android:text="@string/btn_ver"
            android:textAllCaps="false"
            android:padding="10dp"
            />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ultimoCodigo"
                android:text=""
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textAppearance="@color/colorPrimary"/>
        </LinearLayout>

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
